Sniker med fix overflow nested accordion

--- a/src/components/NestedAccordion/_nested-accordion.scss
+++ b/src/components/NestedAccordion/_nested-accordion.scss
@@ -52,6 +52,7 @@
     color: $ssb-dark-6;
     font-size: 16px;
     padding: 10px 10px 10px 30px;
+    overflow-x: auto;
 
     &.closed {
       display: none;
